compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__assert__mismatched_types.snap
---
source: compiler-core/src_refactored/__core/type_/tests/assert.rs
assertion_line: 111
expression: assert 10
snapshot_kind: text
---
----- SOURCE CODE
assert 10

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:8
  │
1 │ assert 10
  │        ^^

Expected type:

    Bool

Found type:

    Int
